k8s/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
        app: auth
  template:
    metadata:
      labels: 
        app: auth
    spec: 
      containers:
        - image: sunil1912/auth
          name: auth
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"

---

apiVersion: v1
kind: Service
metadata: 
  name: auth-srv
spec: 
  type: ClusterIP
  selector:
    app: auth
  ports:
    - protocol: TCP
      name: auth
      port: 3000
      targetPort: 3000
