k8s/tickets.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
        app: tickets
  template:
    metadata:
      labels: 
        app: tickets
    spec: 
      containers:
        - image: sunil1912/tickets
          name: tickets
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"

---

apiVersion: v1
kind: Service
metadata: 
  name: tickets-srv
spec: 
  type: ClusterIP
  selector:
    app: tickets
  ports:
    - protocol: TCP
      name: tickets
      port: 3000
      targetPort: 3000
